added dates extinguished!

--- a/p1-18-df.ipynb
+++ b/p1-18-df.ipynb
@@ -13897,7 +13897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -13928,6 +13928,7 @@
        "      <th>Fire Started</th>\n",
        "      <th>Fire Extinguished</th>\n",
        "      <th>Date Started</th>\n",
+       "      <th>Date Extinguished</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -13940,6 +13941,7 @@
        "      <td>2018-04-12T14:30:00Z</td>\n",
        "      <td>2019-01-03T09:46:00Z</td>\n",
        "      <td>2018-04-12</td>\n",
+       "      <td>2019-01-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -13950,6 +13952,7 @@
        "      <td>2018-01-09T04:00:00Z</td>\n",
        "      <td>2019-01-03T09:43:00Z</td>\n",
        "      <td>2018-01-09</td>\n",
+       "      <td>2019-01-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -13960,6 +13963,7 @@
        "      <td>2018-02-07T15:53:00Z</td>\n",
        "      <td>2019-01-03T09:43:00Z</td>\n",
        "      <td>2018-02-07</td>\n",
+       "      <td>2019-01-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -13970,6 +13974,7 @@
        "      <td>2018-02-18T14:12:00Z</td>\n",
        "      <td>2019-01-03T09:43:00Z</td>\n",
        "      <td>2018-02-18</td>\n",
+       "      <td>2019-01-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -13980,9 +13985,11 @@
        "      <td>2018-02-18T13:45:00Z</td>\n",
        "      <td>2019-01-03T09:44:00Z</td>\n",
        "      <td>2018-02-18</td>\n",
+       "      <td>2019-01-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -14000,6 +14007,7 @@
        "      <td>2018-11-13T08:19:00Z</td>\n",
        "      <td>2019-01-04T08:45:00Z</td>\n",
        "      <td>2018-11-13</td>\n",
+       "      <td>2019-01-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>306</th>\n",
@@ -14010,6 +14018,7 @@
        "      <td>2018-11-14T14:56:00Z</td>\n",
        "      <td>2019-01-04T08:45:00Z</td>\n",
        "      <td>2018-11-14</td>\n",
+       "      <td>2019-01-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>307</th>\n",
@@ -14020,6 +14029,7 @@
        "      <td>2018-11-15T01:39:00Z</td>\n",
        "      <td>2019-01-04T08:44:00Z</td>\n",
        "      <td>2018-11-15</td>\n",
+       "      <td>2019-01-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>308</th>\n",
@@ -14030,6 +14040,7 @@
        "      <td>2018-11-12T10:06:00Z</td>\n",
        "      <td>2019-01-04T08:46:00Z</td>\n",
        "      <td>2018-11-12</td>\n",
+       "      <td>2019-01-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>309</th>\n",
@@ -14040,10 +14051,11 @@
        "      <td>2018-11-16T11:01:00Z</td>\n",
        "      <td>2019-01-04T08:44:00Z</td>\n",
        "      <td>2018-11-16</td>\n",
+       "      <td>2019-01-04</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>310 rows × 7 columns</p>\n",
+       "<p>310 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -14060,29 +14072,30 @@
        "308                      Peak Fire         186.0  34.267348 -118.643816   \n",
        "309                     Bear Fire           10.0  37.128570 -122.120360   \n",
        "\n",
-       "             Fire Started     Fire Extinguished Date Started  \n",
-       "0    2018-04-12T14:30:00Z  2019-01-03T09:46:00Z   2018-04-12  \n",
-       "1    2018-01-09T04:00:00Z  2019-01-03T09:43:00Z   2018-01-09  \n",
-       "2    2018-02-07T15:53:00Z  2019-01-03T09:43:00Z   2018-02-07  \n",
-       "3    2018-02-18T14:12:00Z  2019-01-03T09:43:00Z   2018-02-18  \n",
-       "4    2018-02-18T13:45:00Z  2019-01-03T09:44:00Z   2018-02-18  \n",
-       "..                    ...                   ...          ...  \n",
-       "305  2018-11-13T08:19:00Z  2019-01-04T08:45:00Z   2018-11-13  \n",
-       "306  2018-11-14T14:56:00Z  2019-01-04T08:45:00Z   2018-11-14  \n",
-       "307  2018-11-15T01:39:00Z  2019-01-04T08:44:00Z   2018-11-15  \n",
-       "308  2018-11-12T10:06:00Z  2019-01-04T08:46:00Z   2018-11-12  \n",
-       "309  2018-11-16T11:01:00Z  2019-01-04T08:44:00Z   2018-11-16  \n",
+       "             Fire Started     Fire Extinguished Date Started Date Extinguished  \n",
+       "0    2018-04-12T14:30:00Z  2019-01-03T09:46:00Z   2018-04-12        2019-01-03  \n",
+       "1    2018-01-09T04:00:00Z  2019-01-03T09:43:00Z   2018-01-09        2019-01-03  \n",
+       "2    2018-02-07T15:53:00Z  2019-01-03T09:43:00Z   2018-02-07        2019-01-03  \n",
+       "3    2018-02-18T14:12:00Z  2019-01-03T09:43:00Z   2018-02-18        2019-01-03  \n",
+       "4    2018-02-18T13:45:00Z  2019-01-03T09:44:00Z   2018-02-18        2019-01-03  \n",
+       "..                    ...                   ...          ...               ...  \n",
+       "305  2018-11-13T08:19:00Z  2019-01-04T08:45:00Z   2018-11-13        2019-01-04  \n",
+       "306  2018-11-14T14:56:00Z  2019-01-04T08:45:00Z   2018-11-14        2019-01-04  \n",
+       "307  2018-11-15T01:39:00Z  2019-01-04T08:44:00Z   2018-11-15        2019-01-04  \n",
+       "308  2018-11-12T10:06:00Z  2019-01-04T08:46:00Z   2018-11-12        2019-01-04  \n",
+       "309  2018-11-16T11:01:00Z  2019-01-04T08:44:00Z   2018-11-16        2019-01-04  \n",
        "\n",
-       "[310 rows x 7 columns]"
+       "[310 rows x 8 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fire_df[\"Date Started\"]= fire_df['Fire Started'].str.split(\"T\", n = 1, expand = True)\n",
+    "fire_df[\"Date Extinguished\"]= fire_df['Fire Extinguished'].str.split(\"T\", n = 1, expand = True)\n",
     "fire_df"
    ]
   },
