adding cleaned data sheets, with counties and dates

--- a/p1-18-df.ipynb
+++ b/p1-18-df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -13679,7 +13679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -13712,7 +13712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -13740,8 +13740,8 @@
        "      <th>Acres Burned</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
-       "      <th>Fire Started</th>\n",
-       "      <th>Fire Extinguished</th>\n",
+       "      <th>Date Started</th>\n",
+       "      <th>Date Extinguished</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -13863,7 +13863,7 @@
        "308                      Peak Fire         186.0  34.267348 -118.643816   \n",
        "309                     Bear Fire           10.0  37.128570 -122.120360   \n",
        "\n",
-       "             Fire Started     Fire Extinguished  \n",
+       "             Date Started     Date Extinguished  \n",
        "0    2018-04-12T14:30:00Z  2019-01-03T09:46:00Z  \n",
        "1    2018-01-09T04:00:00Z  2019-01-03T09:43:00Z  \n",
        "2    2018-02-07T15:53:00Z  2019-01-03T09:43:00Z  \n",
@@ -13879,7 +13879,7 @@
        "[310 rows x 6 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13889,15 +13889,15 @@
     "                             'Acres Burned':acreage, \n",
     "                             'Latitude':latitude, \n",
     "                             'Longitude':longitude, \n",
-    "                             \"Fire Started\":start, \n",
-    "                             'Fire Extinguished':extinguished})\n",
+    "                             \"Date Started\":start, \n",
+    "                             'Date Extinguished':extinguished})\n",
     "\n",
     "fire_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -13925,10 +13925,10 @@
        "      <th>Acres Burned</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
-       "      <th>Fire Started</th>\n",
-       "      <th>Fire Extinguished</th>\n",
        "      <th>Date Started</th>\n",
        "      <th>Date Extinguished</th>\n",
+       "      <th>Fire Started</th>\n",
+       "      <th>Fire Extinguished</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -14072,7 +14072,7 @@
        "308                      Peak Fire         186.0  34.267348 -118.643816   \n",
        "309                     Bear Fire           10.0  37.128570 -122.120360   \n",
        "\n",
-       "             Fire Started     Fire Extinguished Date Started Date Extinguished  \n",
+       "             Date Started     Date Extinguished Fire Started Fire Extinguished  \n",
        "0    2018-04-12T14:30:00Z  2019-01-03T09:46:00Z   2018-04-12        2019-01-03  \n",
        "1    2018-01-09T04:00:00Z  2019-01-03T09:43:00Z   2018-01-09        2019-01-03  \n",
        "2    2018-02-07T15:53:00Z  2019-01-03T09:43:00Z   2018-02-07        2019-01-03  \n",
@@ -14088,16 +14088,215 @@
        "[310 rows x 8 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fire_df[\"Date Started\"]= fire_df['Fire Started'].str.split(\"T\", n = 1, expand = True)\n",
-    "fire_df[\"Date Extinguished\"]= fire_df['Fire Extinguished'].str.split(\"T\", n = 1, expand = True)\n",
+    "fire_df['Fire Started'] = fire_df['Date Started'].str.split(\"T\", n = 1)\n",
+    "fire_df['Fire Started'] = fire_df['Date Started'].str.split(\"T\", n = 1, expand=True)\n",
+    "\n",
+    "\n",
+    "fire_df[\"Fire Extinguished\"]= fire_df['Date Extinguished'].str.split(\"T\", n = 1)\n",
+    "fire_df[\"Fire Extinguished\"]= fire_df['Date Extinguished'].str.split(\"T\", n = 1, expand = True)\n",
     "fire_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Acres Burned</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Fire Started</th>\n",
+       "      <th>Fire Extinguished</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aqueduct Fire</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>35.924360</td>\n",
+       "      <td>-119.940830</td>\n",
+       "      <td>2018-04-12</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Montecito Flooding / Mudflows</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2018-01-09</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Haycamp Fire</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>35.966890</td>\n",
+       "      <td>-121.281850</td>\n",
+       "      <td>2018-02-07</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pleasant Fire</td>\n",
+       "      <td>2070.0</td>\n",
+       "      <td>37.402080</td>\n",
+       "      <td>-118.502350</td>\n",
+       "      <td>2018-02-18</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Wilcox Fire</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2018-02-18</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>305</th>\n",
+       "      <td>Sierra Fire</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>34.180750</td>\n",
+       "      <td>-117.431840</td>\n",
+       "      <td>2018-11-13</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>306</th>\n",
+       "      <td>Niles Fire</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>37.611580</td>\n",
+       "      <td>-121.941820</td>\n",
+       "      <td>2018-11-14</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307</th>\n",
+       "      <td>Briggs Fire</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>34.301667</td>\n",
+       "      <td>-119.099167</td>\n",
+       "      <td>2018-11-15</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308</th>\n",
+       "      <td>Peak Fire</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>34.267348</td>\n",
+       "      <td>-118.643816</td>\n",
+       "      <td>2018-11-12</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>309</th>\n",
+       "      <td>Bear Fire</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>37.128570</td>\n",
+       "      <td>-122.120360</td>\n",
+       "      <td>2018-11-16</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>310 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              Name  Acres Burned   Latitude   Longitude  \\\n",
+       "0                    Aqueduct Fire          30.0  35.924360 -119.940830   \n",
+       "1    Montecito Flooding / Mudflows           0.0   0.000000    0.000000   \n",
+       "2                     Haycamp Fire          50.0  35.966890 -121.281850   \n",
+       "3                    Pleasant Fire        2070.0  37.402080 -118.502350   \n",
+       "4                      Wilcox Fire          33.0   0.000000    0.000000   \n",
+       "..                             ...           ...        ...         ...   \n",
+       "305                    Sierra Fire         147.0  34.180750 -117.431840   \n",
+       "306                     Niles Fire          20.0  37.611580 -121.941820   \n",
+       "307                    Briggs Fire         150.0  34.301667 -119.099167   \n",
+       "308                      Peak Fire         186.0  34.267348 -118.643816   \n",
+       "309                     Bear Fire           10.0  37.128570 -122.120360   \n",
+       "\n",
+       "    Fire Started Fire Extinguished  \n",
+       "0     2018-04-12        2019-01-03  \n",
+       "1     2018-01-09        2019-01-03  \n",
+       "2     2018-02-07        2019-01-03  \n",
+       "3     2018-02-18        2019-01-03  \n",
+       "4     2018-02-18        2019-01-03  \n",
+       "..           ...               ...  \n",
+       "305   2018-11-13        2019-01-04  \n",
+       "306   2018-11-14        2019-01-04  \n",
+       "307   2018-11-15        2019-01-04  \n",
+       "308   2018-11-12        2019-01-04  \n",
+       "309   2018-11-16        2019-01-04  \n",
+       "\n",
+       "[310 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fire_df_clean= fire_df[['Name','Acres Burned', 'Latitude', 'Longitude', 'Fire Started', 'Fire Extinguished']]\n",
+    "fire_df_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fire_df_clean.to_csv('outputs/2018_fires')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
