--- a/hist_weather_2013.ipynb
+++ b/hist_weather_2013.ipynb
@@ -586,7 +586,7 @@
    "outputs": [],
    "source": [
     "base_url = \"http://api.worldweatheronline.com/premium/v1/past-weather.ashx\"\n",
-    "api_key='e13793a6f1bf4f86a8f20558202204'\n",
+    "api_key='YOUR KEY HERE'\n",
     "#location = '35.924360,-119.940830'\n",
     "\n",
     "call = f'http://api.worldweatheronline.com/premium/v1/past-weather.ashx?key={api_key}&q={location}&format=json&date={date}&endate={date}&tp=24'\n",
