--- a/hist_weather_2015.ipynb
+++ b/hist_weather_2015.ipynb
@@ -634,7 +634,7 @@
    ],
    "source": [
     "base_url = \"http://api.worldweatheronline.com/premium/v1/past-weather.ashx\"\n",
-    "api_key='3c578375081048feaef51314202204 '\n",
+    "api_key='YOUR KEY HERE'\n",
     "#location = '35.924360,-119.940830'\n",
     "\n",
     "call = f'http://api.worldweatheronline.com/premium/v1/past-weather.ashx?key={api_key}&q={location}&format=json&date={date}&endate={date}&tp=24'\n",
