--- a/hist_weather_2018.ipynb
+++ b/hist_weather_2018.ipynb
@@ -4,101 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Acres Burned</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>Fire Started</th>\n",
-       "      <th>Fire Extinguished</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Aqueduct Fire</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>35.92436</td>\n",
-       "      <td>-119.94083</td>\n",
-       "      <td>2018-04-12</td>\n",
-       "      <td>2019-01-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Montecito Flooding / Mudflows</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>2018-01-09</td>\n",
-       "      <td>2019-01-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Haycamp Fire</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>35.96689</td>\n",
-       "      <td>-121.28185</td>\n",
-       "      <td>2018-02-07</td>\n",
-       "      <td>2019-01-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Pleasant Fire</td>\n",
-       "      <td>2070.0</td>\n",
-       "      <td>37.40208</td>\n",
-       "      <td>-118.50235</td>\n",
-       "      <td>2018-02-18</td>\n",
-       "      <td>2019-01-03</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0                           Name  Acres Burned  Latitude  \\\n",
-       "0           0                  Aqueduct Fire          30.0  35.92436   \n",
-       "1           1  Montecito Flooding / Mudflows           0.0   0.00000   \n",
-       "2           2                   Haycamp Fire          50.0  35.96689   \n",
-       "3           3                  Pleasant Fire        2070.0  37.40208   \n",
-       "\n",
-       "   Longitude Fire Started Fire Extinguished  \n",
-       "0 -119.94083   2018-04-12        2019-01-03  \n",
-       "1    0.00000   2018-01-09        2019-01-03  \n",
-       "2 -121.28185   2018-02-07        2019-01-03  \n",
-       "3 -118.50235   2018-02-18        2019-01-03  "
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
@@ -117,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +547,7 @@
        "309   2018-11-16        2019-01-04  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -683,14 +589,13 @@
      "output_type": "stream",
      "text": [
       "couldn't find information for 227\n",
-      "couldn't find information for 278\n",
-      "{'data': {'request': [{'type': 'LatLon', 'query': 'Lat 37.13 and Lon -122.12'}], 'weather': [{'date': '2018-11-16', 'astronomy': [{'sunrise': '07:49 AM', 'sunset': '05:58 PM', 'moonrise': '02:46 PM', 'moonset': '01:03 AM', 'moon_phase': 'First Quarter', 'moon_illumination': '56'}], 'maxtempC': '20', 'maxtempF': '68', 'mintempC': '12', 'mintempF': '53', 'avgtempC': '14', 'avgtempF': '58', 'totalSnow_cm': '0.0', 'sunHour': '8.7', 'uvIndex': '4', 'hourly': [{'time': '24', 'tempC': '20', 'tempF': '68', 'windspeedMiles': '2', 'windspeedKmph': '3', 'winddirDegree': '120', 'winddir16Point': 'ESE', 'weatherCode': '113', 'weatherIconUrl': [{'value': 'http://cdn.worldweatheronline.com/images/wsymbols01_png_64/wsymbol_0001_sunny.png'}], 'weatherDesc': [{'value': 'Sunny'}], 'precipMM': '0.0', 'precipInches': '0.0', 'humidity': '31', 'visibility': '10', 'visibilityMiles': '6', 'pressure': '1016', 'pressureInches': '30', 'cloudcover': '4', 'HeatIndexC': '17', 'HeatIndexF': '63', 'DewPointC': '-0', 'DewPointF': '32', 'WindChillC': '17', 'WindChillF': '63', 'WindGustMiles': '3', 'WindGustKmph': '5', 'FeelsLikeC': '17', 'FeelsLikeF': '63', 'uvIndex': '4'}]}]}}\n"
+      "couldn't find information for 278\n"
      ]
     }
    ],
    "source": [
     "base_url = \"http://api.worldweatheronline.com/premium/v1/past-weather.ashx\"\n",
-    "api_key='YOUR KEY HERE'\n",
+    "api_key='YOUR API KEY HERE'\n",
     "#location = '35.924360,-119.940830'\n",
     "\n",
     "call = f'http://api.worldweatheronline.com/premium/v1/past-weather.ashx?key={api_key}&q={location}&format=json&date={date}&endate={date}&tp=24'\n",
@@ -730,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -754,6 +659,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Location</th>\n",
        "      <th>Precipitation(MM)</th>\n",
        "      <th>Humidity</th>\n",
        "      <th>Temperature</th>\n",
@@ -766,6 +672,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>37.12857,-122.12036</td>\n",
        "      <td>0.1</td>\n",
        "      <td>48</td>\n",
        "      <td>64</td>\n",
@@ -776,6 +683,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>37.12857,-122.12036</td>\n",
        "      <td>0.0</td>\n",
        "      <td>58</td>\n",
        "      <td>68</td>\n",
@@ -786,6 +694,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>37.12857,-122.12036</td>\n",
        "      <td>0.1</td>\n",
        "      <td>35</td>\n",
        "      <td>47</td>\n",
@@ -796,6 +705,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>37.12857,-122.12036</td>\n",
        "      <td>0.0</td>\n",
        "      <td>67</td>\n",
        "      <td>74</td>\n",
@@ -806,13 +716,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.1</td>\n",
-       "      <td>48</td>\n",
-       "      <td>64</td>\n",
-       "      <td>15</td>\n",
-       "      <td>21</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2018-04-12</td>\n",
+       "      <td>37.12857,-122.12036</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>67</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-05-17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -823,9 +734,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>305</th>\n",
+       "      <th>297</th>\n",
+       "      <td>37.12857,-122.12036</td>\n",
        "      <td>0.0</td>\n",
        "      <td>11</td>\n",
        "      <td>70</td>\n",
@@ -835,7 +748,8 @@
        "      <td>2018-11-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>306</th>\n",
+       "      <th>298</th>\n",
+       "      <td>37.12857,-122.12036</td>\n",
        "      <td>0.0</td>\n",
        "      <td>22</td>\n",
        "      <td>71</td>\n",
@@ -845,7 +759,8 @@
        "      <td>2018-11-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>307</th>\n",
+       "      <th>299</th>\n",
+       "      <td>37.12857,-122.12036</td>\n",
        "      <td>0.0</td>\n",
        "      <td>38</td>\n",
        "      <td>70</td>\n",
@@ -855,7 +770,8 @@
        "      <td>2018-11-15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>308</th>\n",
+       "      <th>300</th>\n",
+       "      <td>37.12857,-122.12036</td>\n",
        "      <td>0.0</td>\n",
        "      <td>19</td>\n",
        "      <td>68</td>\n",
@@ -865,7 +781,8 @@
        "      <td>2018-11-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>309</th>\n",
+       "      <th>301</th>\n",
+       "      <td>37.12857,-122.12036</td>\n",
        "      <td>0.0</td>\n",
        "      <td>31</td>\n",
        "      <td>68</td>\n",
@@ -876,46 +793,47 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>310 rows × 7 columns</p>\n",
+       "<p>302 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Precipitation(MM) Humidity Temperature Wind Speed Wind Gust Cloud Cover  \\\n",
-       "0                 0.1       48          64         15        21           6   \n",
-       "1                 0.0       58          68          5         9           0   \n",
-       "2                 0.1       35          47         11        16           1   \n",
-       "3                 0.0       67          74          5         7           8   \n",
-       "4                 0.1       48          64         15        21           6   \n",
-       "..                ...      ...         ...        ...       ...         ...   \n",
-       "305               0.0       11          70          8        11          16   \n",
-       "306               0.0       22          71          3         4           6   \n",
-       "307               0.0       38          70          5         8          48   \n",
-       "308               0.0       19          68          9        15           0   \n",
-       "309               0.0       31          68          2         3           4   \n",
+       "                Location Precipitation(MM) Humidity Temperature Wind Speed  \\\n",
+       "0    37.12857,-122.12036               0.1       48          64         15   \n",
+       "1    37.12857,-122.12036               0.0       58          68          5   \n",
+       "2    37.12857,-122.12036               0.1       35          47         11   \n",
+       "3    37.12857,-122.12036               0.0       67          74          5   \n",
+       "4    37.12857,-122.12036               0.0       65          67          5   \n",
+       "..                   ...               ...      ...         ...        ...   \n",
+       "297  37.12857,-122.12036               0.0       11          70          8   \n",
+       "298  37.12857,-122.12036               0.0       22          71          3   \n",
+       "299  37.12857,-122.12036               0.0       38          70          5   \n",
+       "300  37.12857,-122.12036               0.0       19          68          9   \n",
+       "301  37.12857,-122.12036               0.0       31          68          2   \n",
        "\n",
-       "           Date  \n",
-       "0    2018-04-12  \n",
-       "1    2018-02-07  \n",
-       "2    2018-02-18  \n",
-       "3    2018-05-14  \n",
-       "4    2018-04-12  \n",
-       "..          ...  \n",
-       "305  2018-11-13  \n",
-       "306  2018-11-14  \n",
-       "307  2018-11-15  \n",
-       "308  2018-11-12  \n",
-       "309  2018-11-16  \n",
+       "    Wind Gust Cloud Cover        Date  \n",
+       "0          21           6  2018-04-12  \n",
+       "1           9           0  2018-02-07  \n",
+       "2          16           1  2018-02-18  \n",
+       "3           7           8  2018-05-14  \n",
+       "4           7           1  2018-05-17  \n",
+       "..        ...         ...         ...  \n",
+       "297        11          16  2018-11-13  \n",
+       "298         4           6  2018-11-14  \n",
+       "299         8          48  2018-11-15  \n",
+       "300        15           0  2018-11-12  \n",
+       "301         3           4  2018-11-16  \n",
        "\n",
-       "[310 rows x 7 columns]"
+       "[302 rows x 8 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_df = pd.DataFrame({'Precipitation(MM)':precip, \n",
+    "data_df = pd.DataFrame({'Location': location,\n",
+    "            'Precipitation(MM)':precip, \n",
     "           'Humidity':humidity,\n",
     "           'Temperature':temp, \n",
     "           'Humidity': humidity,\n",
@@ -924,13 +842,12 @@
     "            'Temperature':temp,\n",
     "           'Cloud Cover':cloudcover,\n",
     "            'Date':datelist})\n",
-    "data_df\n",
-    "\n"
+    "data_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,9 +863,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'date': '2018-11-16', 'astronomy': [{'sunrise': '07:49 AM', 'sunset': '05:58 PM', 'moonrise': '02:46 PM', 'moonset': '01:03 AM', 'moon_phase': 'First Quarter', 'moon_illumination': '56'}], 'maxtempC': '20', 'maxtempF': '68', 'mintempC': '12', 'mintempF': '53', 'avgtempC': '14', 'avgtempF': '58', 'totalSnow_cm': '0.0', 'sunHour': '8.7', 'uvIndex': '4', 'hourly': [{'time': '24', 'tempC': '20', 'tempF': '68', 'windspeedMiles': '2', 'windspeedKmph': '3', 'winddirDegree': '120', 'winddir16Point': 'ESE', 'weatherCode': '113', 'weatherIconUrl': [{'value': 'http://cdn.worldweatheronline.com/images/wsymbols01_png_64/wsymbol_0001_sunny.png'}], 'weatherDesc': [{'value': 'Sunny'}], 'precipMM': '0.0', 'precipInches': '0.0', 'humidity': '31', 'visibility': '10', 'visibilityMiles': '6', 'pressure': '1016', 'pressureInches': '30', 'cloudcover': '4', 'HeatIndexC': '17', 'HeatIndexF': '63', 'DewPointC': '-0', 'DewPointF': '32', 'WindChillC': '17', 'WindChillF': '63', 'WindGustMiles': '3', 'WindGustKmph': '5', 'FeelsLikeC': '17', 'FeelsLikeF': '63', 'uvIndex': '4'}]}]\n"
+     ]
+    }
+   ],
    "source": [
     "print(response['data']['weather'])"
    ]
@@ -977,7 +902,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
